--- a/_posts/弥勒上生经/2024-02-11-01.md
+++ b/_posts/弥勒上生经/2024-02-11-01.md
@@ -11,15 +11,15 @@ categories: "弥勒上生经"
 
 ...
 
-佛告優波離：此名*兜率陀天十善報應勝妙福處*。*若我住世一小劫中，廣說一生補處菩薩報應及十善果者不能窮盡*；今為汝等<dfn title="畧；同“略”。"><ruby>畧<rp>（</rp><rt>lüè</rt><rp>）</rp></ruby></dfn>而解說。佛告優波離：若有比丘及一切大眾，不厭生死樂生天者、愛敬無上菩提心者、欲為彌勒作弟子者；當作是觀。作是觀者，應持五戒、八齋、具足戒，身心精進、不求斷結，修十善法；一一思惟兜率陀天上上妙快樂。作是觀者名為正觀，若他觀者名為邪觀。
+佛告優波離：此名兜率陀天十善報應勝妙福處。若我住世一小劫中，廣說一生補處菩薩報應及十善果者不能窮盡；今為汝等<dfn title="畧；同“略”。"><ruby>畧<rp>（</rp><rt>lüè</rt><rp>）</rp></ruby></dfn>而解說。佛告優波離：若有比丘及一切大眾，不厭生死樂生天者、愛敬無上菩提心者、欲為彌勒作弟子者；當作是觀。作是觀者，應持五戒、八齋、具足戒，身心精進、不求斷結，修十善法；一一思惟兜率陀天上上妙快樂。作是觀者名為正觀，若他觀者名為邪觀。
 
 ...
 
 佛告優波離：彌勒先於波羅捺國劫波利村，波婆利大婆羅門家生，却後十二年二月十五日還本生處，結加趺坐如入滅定。身紫金色，光明豔赫如百千日，上至兜率陀天。...如是處兜率陀天，晝夜恒說此法度諸天子。**閻浮提歲數五十六億萬歲，爾乃下生於閻浮提；如<cite>《彌勒下生經》</cite>說**。
 
-佛告優波離：是名彌勒菩薩於閻浮提沒生兜率陀天因緣。**佛滅度後，我諸弟子若有精勤修諸功德、威儀不缺；掃塔塗地，以眾名香妙花供養；行眾三昧深入正受；讀誦經典。如是等人應當至心，雖不斷結如得六通；應當繫念念佛形像，稱彌勒名。如是等輩，若一念頃受八戒齋，修諸淨業發弘誓願；命終之後，譬如壯士屈申臂頃，即得往生兜率陀天。**於蓮華上結加趺坐，百千天子作天伎樂，持天曼陀羅花、摩訶曼陀羅華，以散其上讚言：善哉善哉！善男子，汝**於閻浮提廣修福業來生此處**。此處名兜率陀天，今此天主名曰彌勒，汝當歸依。應聲即禮，禮已諦觀眉間白毫相光，即得超越九十億劫生死之罪。是時*菩薩隨其宿緣，為說妙法，令其堅固不退轉於無上道心*。如是等眾生若淨諸業、行六事法，必定無疑當得生於兜率天上值遇彌勒，亦隨彌勒下閻浮提第一聞法。於未來世值遇賢劫一切諸佛，於星宿劫亦得值遇諸佛世尊，於諸佛前受菩提記。
+佛告優波離：是名彌勒菩薩於閻浮提沒生兜率陀天因緣。**佛滅度後，我諸弟子若有精勤修諸功德、威儀不缺；掃塔塗地，以眾名香妙花供養；行眾三昧深入正受；讀誦經典。如是等人應當至心，雖不斷結如得六通；應當繫念念佛形像，稱彌勒名。如是等輩，若一念頃受八戒齋，修諸淨業發弘誓願；命終之後，譬如壯士屈申臂頃，即得往生兜率陀天。**於蓮華上結加趺坐，百千天子作天伎樂，持天曼陀羅花、摩訶曼陀羅華，以散其上讚言：善哉善哉！善男子，汝**於閻浮提廣修福業來生此處**。此處名兜率陀天，今此天主名曰彌勒，汝當歸依。應聲即禮，禮已諦觀眉間白毫相光，即得超越九十億劫生死之罪。是時菩薩隨其宿緣，為說妙法，令其堅固不退轉於無上道心。如是等眾生若淨諸業、行六事法，必定無疑當得生於兜率天上值遇彌勒，亦隨彌勒下閻浮提第一聞法。於未來世值遇賢劫一切諸佛，於星宿劫亦得值遇諸佛世尊，於諸佛前受菩提記。
 
-佛告優波離：**若善男子、善女人，犯諸禁戒造眾惡業；聞是菩薩大悲名字，五體投地誠心懺悔，是諸惡業速得清淨。未來世中諸眾生等，聞是菩薩大悲名稱，造立形像，香花、衣服、繒蓋、幢幡，禮拜繫念；此人命欲終時，彌勒菩薩放眉間白毫大人相光，與諸天子雨曼陀羅花，來迎此人。此人須臾即得往生值遇彌勒，頭面禮敬，未舉頭頃便得聞法，即於無上道得不退轉，於未來世得值恒河沙等諸佛如來。**
+佛告優波離：若善男子、善女人，犯諸禁戒造眾惡業；聞是菩薩大悲名字，五體投地誠心懺悔，是諸惡業速得清淨。未來世中諸眾生等，聞是菩薩大悲名稱，造立形像，香花、衣服、繒蓋、幢幡，禮拜繫念；此人命欲終時，彌勒菩薩放眉間白毫大人相光，與諸天子雨曼陀羅花，來迎此人。此人須臾即得往生值遇彌勒，頭面禮敬，未舉頭頃便得聞法，即於無上道得不退轉，於未來世得值恒河沙等諸佛如來。
 
 ...
 
