--- a/_posts/弥勒上生经/2024-02-11-01.md
+++ b/_posts/弥勒上生经/2024-02-11-01.md
@@ -5,7 +5,7 @@ categories: "弥勒上生经"
 ---
 ### 「弥勒菩萨」上升兜率天因缘
 
-<cite>《佛说观弥勒菩萨上升兜率天经》（又名《弥勒上生经》）</cite>有云：『【繁体】：爾時，優波離亦從座起，頭面作禮而白佛言：世尊！**世尊往昔於毘尼中及諸經藏說<dfn title="阿逸多；即弥勒菩萨。">阿逸多</dfn>次當作佛**。此阿逸多具凡夫身，未斷諸漏；此人命終當生何處？其人今者雖復出家，不修禪定不斷煩惱，佛記此人成佛無疑。此人命終生何國土？
+<cite>《佛说观弥勒菩萨上升兜率天经》（又名《弥勒上生经》）</cite>有云：『【繁体】：爾時，優波離亦從座起，頭面作禮而白佛言：世尊！<strong style="color: red; border-bottom: 10px solid red;">世尊往昔於毘尼中及諸經藏說<dfn title="阿逸多；即弥勒菩萨。">阿逸多</dfn>次當作佛</strong>。此阿逸多具凡夫身，未斷諸漏；此人命終當生何處？其人今者雖復出家，不修禪定不斷煩惱，佛記此人成佛無疑。此人命終生何國土？
 
 佛告優波離：諦聽諦聽，善思念之。如來、應、正遍知，今於此眾說彌勒菩薩摩訶薩阿耨多羅三藐三菩提記。此人從今十二年後命終，必得往生兜率陀天上。
 
@@ -15,9 +15,9 @@ categories: "弥勒上生经"
 
 ...
 
-佛告優波離：彌勒先於波羅捺國劫波利村，波婆利大婆羅門家生，却後十二年二月十五日還本生處，結加趺坐如入滅定。身紫金色，光明豔赫如百千日，上至兜率陀天。...如是處兜率陀天，晝夜恒說此法度諸天子。**閻浮提歲數五十六億萬歲，爾乃下生於閻浮提；如<cite>《彌勒下生經》</cite>說**。
+佛告優波離：彌勒先於波羅捺國劫波利村，波婆利大婆羅門家生，却後十二年二月十五日還本生處，結加趺坐如入滅定。身紫金色，光明豔赫如百千日，上至兜率陀天。...如是處兜率陀天，晝夜恒說此法度諸天子。<strong style="color: red; border-bottom: 4px solid red;">閻浮提歲數五十六億萬歲，爾乃下生於閻浮提；如<cite>《彌勒下生經》</cite>說</strong>。
 
-佛告優波離：是名彌勒菩薩於閻浮提沒生兜率陀天因緣。**佛滅度後，我諸弟子若有精勤修諸功德、威儀不缺；掃塔塗地，以眾名香妙花供養；行眾三昧深入正受；讀誦經典。如是等人應當至心，雖不斷結如得六通；應當繫念念佛形像，稱彌勒名。如是等輩，若一念頃受八戒齋，修諸淨業發弘誓願；命終之後，譬如壯士屈申臂頃，即得往生兜率陀天。**於蓮華上結加趺坐，百千天子作天伎樂，持天曼陀羅花、摩訶曼陀羅華，以散其上讚言：善哉善哉！善男子，汝**於閻浮提廣修福業來生此處**。此處名兜率陀天，今此天主名曰彌勒，汝當歸依。應聲即禮，禮已諦觀眉間白毫相光，即得超越九十億劫生死之罪。是時菩薩隨其宿緣，為說妙法，令其堅固不退轉於無上道心。如是等眾生若淨諸業、行六事法，必定無疑當得生於兜率天上值遇彌勒，亦隨彌勒下閻浮提第一聞法。於未來世值遇賢劫一切諸佛，於星宿劫亦得值遇諸佛世尊，於諸佛前受菩提記。
+佛告優波離：是名彌勒菩薩於閻浮提沒生兜率陀天因緣。<span style="color: green; border-bottom: 4px solid green;">佛滅度後，我諸弟子若有精勤修諸功德、威儀不缺；掃塔塗地，以眾名香妙花供養；行眾三昧深入正受；讀誦經典。如是等人應當至心，雖不斷結如得六通；應當繫念念佛形像，稱彌勒名。如是等輩，若一念頃受八戒齋，修諸淨業發弘誓願；命終之後，譬如壯士屈申臂頃，即得往生兜率陀天。</span>於蓮華上結加趺坐，百千天子作天伎樂，持天曼陀羅花、摩訶曼陀羅華，以散其上讚言：善哉善哉！善男子，汝**於閻浮提廣修福業來生此處**。此處名兜率陀天，今此天主名曰彌勒，汝當歸依。應聲即禮，禮已諦觀眉間白毫相光，即得超越九十億劫生死之罪。是時菩薩隨其宿緣，為說妙法，令其堅固不退轉於無上道心。如是等眾生若淨諸業、行六事法，必定無疑當得生於兜率天上值遇彌勒，亦隨彌勒下閻浮提第一聞法。於未來世值遇賢劫一切諸佛，於星宿劫亦得值遇諸佛世尊，於諸佛前受菩提記。
 
 佛告優波離：若善男子、善女人，犯諸禁戒造眾惡業；聞是菩薩大悲名字，五體投地誠心懺悔，是諸惡業速得清淨。未來世中諸眾生等，聞是菩薩大悲名稱，造立形像，香花、衣服、繒蓋、幢幡，禮拜繫念；此人命欲終時，彌勒菩薩放眉間白毫大人相光，與諸天子雨曼陀羅花，來迎此人。此人須臾即得往生值遇彌勒，頭面禮敬，未舉頭頃便得聞法，即於無上道得不退轉，於未來世得值恒河沙等諸佛如來。
 
@@ -27,5 +27,5 @@ categories: "弥勒上生经"
 
 說是語時，無量大眾即從坐起，頂禮佛足、禮彌勒足，遶佛及彌勒菩薩百千匝。未得道者各發誓願：我等天人八部，今於佛前發誠實誓願；於未來世值遇彌勒，捨此身已皆得上生兜率陀天。
 
-**世尊記**曰：**汝等及未來世修福持戒，皆當往生彌勒菩薩前，為彌勒菩薩之所攝受。**』
+<strong style="color: red; border-bottom: 5px solid red;">世尊記曰：汝等及未來世修福持戒，皆當往生彌勒菩薩前，為彌勒菩薩之所攝受。</strong>』
 
