--- a/_posts/五灯会元/2024-02-14-01.md
+++ b/_posts/五灯会元/2024-02-14-01.md
@@ -3,7 +3,8 @@ layout: null
 title: "「弥勒菩萨」东土应化事迹"
 categories: "五灯会元"
 ---
-### 「弥勒菩萨」东土应化事迹
+
+## 「弥勒菩萨」东土应化事迹
 
 <cite>《五灯会元》</cite>有载：『【繁体】：明州奉化縣<strong style="color: red; border-bottom: 10px solid red; ">布袋和尚</strong>，自稱契此；形裁<dfn title="腲脮；形容肥貌。"><ruby>腲<rp>（</rp><rt>wěi</rt><rp>）</rp></ruby><ruby>脮<rp>（</rp><rt>něi</rt><rp>）</rp></ruby></dfn>蹙額<dfn title="皤腹；指大腹。"><ruby>皤<rp>（</rp><rt>pó</rt><rp>）</rp></ruby>腹</dfn>，出語無定寢臥隨處。常以杖荷一布囊并破席，凡供身之具盡<dfn title="貯；指积藏、蓄积。"><ruby>貯<rp>（</rp><rt>zhù</rt><rp>）</rp></ruby></dfn>囊中。入<dfn title="鄽（同“缠”）肆；泛指街市店铺。"><ruby>鄽<rp>（</rp><rt>chán</rt><rp>）</rp></ruby><ruby>肆<rp>（</rp><rt>sì</rt><rp>）</rp></ruby></dfn>聚落見物則乞；或<dfn title="醯醢；指用鱼肉等制成的酱。"><ruby>醯<rp>（</rp><rt>xī</rt><rp>）</rp></ruby><ruby>醢<rp>（</rp><rt>hǎi</rt><rp>）</rp></ruby></dfn><dfn title="魚菹；指鱼酱。">魚<ruby>菹<rp>（</rp><rt>zū</rt><rp>）</rp></ruby></dfn><dfn title="纔（才）；指方、始。"><ruby>纔<rp>（</rp><rt>cái</rt><rp>）</rp></ruby></dfn>接入口，分少許投囊中。時號長汀子。
 
