--- a/_posts/弥勒上生经/2024-05-04-02.md
+++ b/_posts/弥勒上生经/2024-05-04-02.md
@@ -1,10 +1,10 @@
 ---
 layout: null
-title: "于阎浮提广修福业当生「弥勒菩萨」前"
-tags: "弥勒上生经"
+title: "于阎浮提广修福业当生“弥勒菩萨”前"
+categories: "弥勒上生经"
 ---
 
-# 于阎浮提广修福业当生「弥勒菩萨」前
+# 于阎浮提广修福业当生“弥勒菩萨”前
 
 <cite>《佛说观弥勒菩萨上升兜率天经》（又名《弥勒上生经》）</cite>有云：『【繁体】：佛告優波離：是名彌勒菩薩於閻浮提沒生兜率陀天因緣。<em>佛滅度後，我諸弟子若有精勤修諸功德、威儀不缺；掃塔塗地，以眾名香妙花供養；行眾三昧深入正受；讀誦經典。如是等人應當至心，雖不斷結如得六通；應當繫念念佛形像，稱彌勒名。如是等輩，若一念頃受八戒齋，修諸淨業發弘誓願；命終之後，譬如壯士屈申臂頃，即得往生兜率陀天。</em>
 
