--- a/_posts/弥勒上生经/2024-05-04-01.md
+++ b/_posts/弥勒上生经/2024-05-04-01.md
@@ -1,10 +1,10 @@
 ---
 layout: null
-title: "“弥勒菩萨”于五十六亿万岁后当下阎浮提"
+title: "弥勒菩萨于五十六亿万岁后当下阎浮提"
 categories: "弥勒上生经"
 ---
 
-# “弥勒菩萨”于五十六亿万岁后当下阎浮提
+# 弥勒菩萨于五十六亿万岁后当下阎浮提
 
 <cite>《佛说观弥勒菩萨上升兜率天经》（又名《弥勒上生经》）</cite>有云：『【繁体】：佛告優波離：彌勒先於波羅捺國劫波利村，波婆利大婆羅門家生，却後十二年二月十五日還本生處，結加趺坐如入滅定。身紫金色，光明豔赫如百千日，上至兜率陀天。
 
