--- a/_posts/弥勒上生经/2024-02-11-01.md
+++ b/_posts/弥勒上生经/2024-02-11-01.md
@@ -4,7 +4,7 @@ title: "佛记弥勒菩萨次当作佛"
 categories: "弥勒上生经"
 ---
 
-# 佛记弥勒菩萨次当作佛
+## 佛记弥勒菩萨次当作佛
 
 <cite>《佛说观弥勒菩萨上升兜率天经》（又名《弥勒上生经》）</cite>有云：『【繁体】：爾時，優波離亦從座起，頭面作禮而白佛言：世尊！<strong class="bottomborder2px-red">世尊往昔於毘尼中及諸經藏說<dfn title="阿逸多：弥勒菩萨。">阿逸多</dfn>次當作佛</strong>。此阿逸多具凡夫身，未斷諸漏；此人命終當生何處？其人今者雖復出家，不修禪定不斷煩惱，佛記此人成佛無疑。此人命終生何國土？
 
