--- a/1714820740858.md
+++ b/1714820740858.md
@@ -8,39 +8,39 @@ title: "启动"
 
 <pre>
 <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">布袋豆腐</span><div class="collapse-body">
-├ 实例
-│ ├ 作坊
-│ │ └ 银桥镇
-│ └ 自营店
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">实例</span><div class="collapse-body">
+│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">作坊</span><div class="collapse-body">
+│ │ └ 银桥镇</div></div>
+│ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营店</span><div class="collapse-body">
 │    ├ 大关邑（下关）
 │    ├ 龙溪路（下关）
-│    └ 银仓路（古城）
-│ 
-├ 云南
-│ └ 昆明
-├ 四川
-│ └ 成都
-├ 重庆
-│ └ 重庆
-├ 广东
+│    └ 银仓路（古城）</div></div>
+│</div></div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">云南</span><div class="collapse-body">
+│ └ 昆明</div></div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">四川</span><div class="collapse-body">
+│ └ 成都</div></div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">重庆</span><div class="collapse-body">
+│ └ 重庆</div></div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">广东</span><div class="collapse-body">
 │ ├ 广州
 │ ├ 深圳
-│ └ 珠海
-├ 湖北
-│ └ 武汉
-├ 湖南
-│ └ 长沙
-├ 江西
-│ └ 南昌
-├ 浙江
+│ └ 珠海</div></div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">湖北</span><div class="collapse-body">
+│ └ 武汉</div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">湖南</span><div class="collapse-body">
+│ └ 长沙</div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">江西</span><div class="collapse-body">
+│ └ 南昌</div></div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">浙江</span><div class="collapse-body">
 │ ├ 杭州
 │ ├ 宁波
-│ └ 温州
-├ 上海
-│ └ 上海
-└ 江苏
+│ └ 温州</div></div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">上海</span><div class="collapse-body">
+│ └ 上海</div></div>
+└ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">江苏</span><div class="collapse-body">
    ├ 南京
-   └ 苏州
+   └ 苏州</div></div>
 </div></div></pre>
 
 <script>    
