--- a/1714820740858.md
+++ b/1714820740858.md
@@ -8,7 +8,7 @@ title: "启动"
 
 <pre>
 <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">布袋豆腐</span><div class="collapse-body">
-├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">实例</span><div class="collapse-body">
+├ <div class="collapse"><h2 class="collapse-toggler" data-toggle="collapse">实例</h2><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">作坊</span><div class="collapse-body">
 │ │ └ 银桥镇</div></div>
 │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营店</span><div class="collapse-body">
