--- a/1714820740858.md
+++ b/1714820740858.md
@@ -7,7 +7,7 @@ title: "启动"
 <h1>启动</h1>
 
 <pre>
-<div class="collapse"><span class="collapse-toggler" data-toggle="collapse">布袋<sup>&copy;</sup>豆腐</span><div class="collapse-body">
+<div class="collapse"><span class="collapse-toggler" data-toggle="collapse">布袋<sup>&reg;</sup>豆腐</span><div class="collapse-body">
 ├ <div class="collapse"><h2 class="collapse-toggler inline" data-toggle="collapse">实例</h2><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">作坊</span><div class="collapse-body">
 │ │ └ 银桥镇</div></div>
