--- a/1714820740858.md
+++ b/1714820740858.md
@@ -8,9 +8,9 @@ title: "启动"
 
 <pre>
 <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">布袋<sup>&reg;</sup>豆腐</span><div class="collapse-body">
-├ <div class="collapse"><h2 class="collapse-toggler inline" data-toggle="collapse">实例</h2><div class="collapse-body">
+├ <div class="collapse"><h2 class="collapse-toggler inline" data-toggle="collapse">实例<em>种子</em></h2><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">作坊</span><div class="collapse-body">
-│ │ └ 银桥镇</div></div>
+│ │ └ 银桥镇鹤阳村委会一社</div></div>
 │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营店</span><div class="collapse-body">
 │    ├ 大关邑（下关）
 │    ├ 龙溪路（下关）
