--- a/1714820740858.md
+++ b/1714820740858.md
@@ -11,8 +11,14 @@ title: "启动"
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">产品</span><div class="collapse-body">
 │ ├ 豆腐
 │ ├ 豆腐干
-│ └ 油豆腐</div></div>
-├ <div class="collapse"><h2 class="collapse-toggler inline" data-toggle="collapse">实例<sub>种子</sub></h2><div class="collapse-body">
+│ ├ 油豆腐
+│ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">其他</span><div class="collapse-body">
+│    ├ 嫩豆腐
+│    ├ 毛豆腐
+│    ├ 臭豆腐
+│    └ 豆腐乳</div></div>
+│</div></div>
+├ <div class="collapse"><h2 class="collapse-toggler inline" data-toggle="collapse">实例<small>种子</small></h2><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">作坊</span><div class="collapse-body">
 │ │ └ 银桥镇鹤阳村委会一社</div></div>
 │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营店</span><div class="collapse-body">
