--- a/1714820740858.md
+++ b/1714820740858.md
@@ -19,7 +19,7 @@ title: "启动"
 │    └ 豆腐乳</div></div>
 │</div></div>
 ├ <div class="collapse"><h2 class="collapse-toggler inline" data-toggle="collapse">实例<small>种子</small></h2><div class="collapse-body">
-│ ├ <div class="collapse"><h2 class="collapse-toggler inline" data-toggle="collapse">相关证件</span><div class="collapse-body">
+│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">相关证件</span><div class="collapse-body">
 │ │ ├ 营业执照
 │ │ └ 食品经营许可证</div></div>
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">作坊</span><div class="collapse-body">
