--- a/1714820740858.md
+++ b/1714820740858.md
@@ -6,7 +6,7 @@ title: "启动"
 
 <h1>启动</h1>
 
-<pre>
+<pre style="font-size: 13pt;">
 <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">布袋<sup>&reg;</sup>豆腐</span><div class="collapse-body">
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">产品</span><div class="collapse-body">
 │ ├ 豆腐
