--- a/1714820740858.md
+++ b/1714820740858.md
@@ -18,7 +18,7 @@ title: "启动"
 │   ├ 臭豆腐
 │   └ 豆腐乳</div></div>
 │</div></div>
-├ <div class="collapse"><strong class="collapse-toggler" data-toggle="collapse">实例<small><em>种子</em></small></strong><div class="collapse-body">
+├ <div class="collapse"><strong class="collapse-toggler" data-toggle="collapse">实例<small><em>（种子）</em></small></strong><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">相关证件</span><div class="collapse-body">
 │ │ ├ 营业执照
 │ │ └ 食品经营许可证</div></div>
@@ -30,7 +30,7 @@ title: "启动"
 │    └ 银仓路（古城）</div></div>
 │</div></div>
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">云南</span><div class="collapse-body">
-│ ├ 大理<small><em>见上实例</em></small>
+│ ├ 大理<small><em>（见上实例）</em></small>
 │ └ 昆明
 │</div></div>
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">四川</span><div class="collapse-body">
